# SMOPCA

./: CHANGELOG.md  CHANGES_SUMMARY.md  COMPLETION_SUMMARY.md  GITHUB_ISSUE.md  GITHUB_ISSUE_FIXES.md  GITHUB_PR.md  ISSUE_TEMPLATE.md  README.md  README_GPU.md  pyproject.toml  requirements.txt  setup.py  test_cupy.py  test_smopca.py
.github/workflows/: ci.yml  test.yml
SMOPCA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  model.py  utils.py
